# OOP2

./: Lib.h  Main.cpp  README.md  Stud.cpp  Stud.h  kursiokai.txt  pradine.cpp  test.cpp  test1.cpp
v1.0/: CMakeLists.txt
v1.0/include/: Lib.h  Stud.h  Studentas.h  Zmogus.h
v2.0/: CMakeLists.txt  run.bat
v2.0/doc/html/: _lib_8h.html  _lib_8h_source.html  _main_8cpp.html  _stud_8cpp.html  _stud_8cpp.js  _stud_8h.html  _stud_8h.js  _stud_8h_source.html  _studentas_8cpp.html  _studentas_8cpp.js  _studentas_8h.html  _studentas_8h.js  _studentas_8h_source.html  _timer_8h.html  _timer_8h_source.html  _zmogus_8h.html  _zmogus_8h.js  _zmogus_8h_source.html  annotated.html  annotated_dup.js  class_studentas-members.html  class_studentas.html  class_studentas.js  class_timer-members.html  class_timer.html  class_zmogus-members.html  class_zmogus.html  class_zmogus.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  (+7 more)
v2.0/doc/html/search/: all_2.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  files_0.js  files_2.js  files_4.js  functions_0.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_b.js  related_0.js  searchdata.js  variables_0.js  variables_1.js
v2.0/include/: Stud.h  Studentas.h  Timer.h  Zmogus.h
v2.0/src/: Stud.cpp
v2.0/tests/: test_Studentas.cpp
(+3 files in other folders)
